If statement corrected'

--- a/templates/pages/error-page.html
+++ b/templates/pages/error-page.html
@@ -2,7 +2,7 @@
 <div class="container error-page-main">
     <h1 class="hidden">Error 404</h1>
     <div class="error-box">
-        {% if error_type = '404' %}
+        {% if error_type == '404' %}
         <h2 class="error-page-title">404</h2>
         {% else %}
         <h2 class="error-page-title">500</h2>
