Recipe description changed to recipe difficulty

--- a/templates/components/cards/recipe-card.html
+++ b/templates/components/cards/recipe-card.html
@@ -3,13 +3,13 @@
     <div class="card-body">
         <div class="card-image">
             <!-- image source from database -->
-            <img class="card-img-top" src="{{search_recipe_img}}" alt="{{saerch_recipe_title}}">
+            <img class="card-img-top" src="" alt="{{recipes_user['title']}}">
         </div>
         <!-- card top section -->
-        <h2 class="hidden">{{search_recipe_id}}</h2>
-        <h5 class="card-title">{{saerch_recipe_title}}</h5>
+        <h2 class="hidden">{{recipes_user['title']}}</h2>
+        <h5 class="card-title">{{recipes_user['title']}}</h5>
         <!-- card bottom section -->
-        <p class="card-text">{{search_recipe_desc}}</p>
+        <p class="card-text"><span class="difficulty-title">Difficulty </span>{{recipes_user['difficulty']}}</p>
         <div class="card-bottom-section">
             <a href="{{url_for('add_to_favourites')}}" class="card-fav-icon"><i class="far fa-heart fa-hover-hidden"></i><i class="fas fa-heart fa-hover-show"></i></a>
             <a href="{{url_for('this_recipe')}}" class="card-read-more">Read more</a>
