--- a/templates/components/cards/recipe-card.html
+++ b/templates/components/cards/recipe-card.html
@@ -1,29 +1,36 @@
 <div class="col-min-12 col-md-3 col-sm-4 col-xs-6 card-recipes">
     <!-- card body container -->
     <div class="card-body">
-        <div class="card-image">
-            <!-- image source from database -->
-            <img class="card-img-top" src="/file/{{recipes_user['recipe_image']}}" alt="{{recipes_user['title']}} image title">
-        </div>
-        <!-- card top section -->
-        <h2 class="hidden">{{recipes_user['title']}}</h2>
-        <h5 class="card-title">{{recipes_user['title']}}</h5>
-        {% if body_id == 'your-recipes-page' %} 
+        {% if body_id != 'your-recipes-page' %}
+            <div class="card-image">
+                <!-- image source from database -->
+                <img class="card-img-top" src="" alt="">
+            </div>
+            <!-- card top section -->
+            <h2 class="hidden"></h2>
+            <h5 class="card-title"></h5>
+            <p class="card-text"><span class="difficulty-title">Difficulty : </span></p>
+            <div class="card-bottom-section">
+                <a href="{{url_for('add_to_favourites')}}" class="card-fav-icon">
+                        <i class="far fa-heart fa-hover-hidden"></i>
+                        <i class="fas fa-heart fa-hover-show"></i>
+                    </a>
+                <a href="{{url_for('this_recipe')}}" class="card-read-more">Read more</a>
+            </div>
+        {% else %}
+            <div class="card-image">
+                <!-- image source from database -->
+                <img class="card-img-top" src="/file/{{recipes_user['recipe_image']}}" alt="{{recipes_user['title']}} image title">
+            </div>
+            <!-- card top section -->
+            <h2 class="hidden">{{recipes_user['title']}}</h2>
+            <h5 class="card-title">{{recipes_user['title']}}</h5>
+            <!-- card bottom section -->
             <div class="card-bottom-section">
                 <a href="{{url_for('edit_recipe')}}" class="edit-recipe">Edit</a>
                 <a href="{{url_for('remove_recipe')}}" class="remove-recipe">
-                    <i class="fas fa-trash-alt"></i>
-                </a>
-            </div>
-        {% else %}
-        <!-- card bottom section -->
-            <p class="card-text"><span class="difficulty-title">Difficulty : </span>{{recipes_user['difficulty']}}</p>
-            <div class="card-bottom-section">
-                <a href="{{url_for('add_to_favourites')}}" class="card-fav-icon">
-                    <i class="far fa-heart fa-hover-hidden"></i>
-                    <i class="fas fa-heart fa-hover-show"></i>
-                </a>
-                <a href="{{url_for('this_recipe')}}" class="card-read-more">Read more</a>
+                        <i class="fas fa-trash-alt"></i>
+                    </a>
             </div>
         {% endif %}
     </div>
