Your recipes page cards layout style added

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1508,4 +1508,27 @@ form p {
   padding-top: 60px;
 }
 
+.font-w400 {
+  font-weight: 400;
+}
+
+.recipe-count {
+  color: #FF3377;
+}
+
+.your-cards-result {
+  margin-top: 40px;
+  justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.lo {
+  text-align: right;
+  color: #51ACEA;
+}
+.lo:hover {
+  color: #C471EB;
+}
+
 /*# sourceMappingURL=style.css.map */
