--- a/scss/page-styles/add-recipe.scss
+++ b/scss/page-styles/add-recipe.scss
@@ -161,6 +161,29 @@
     }
 }
 
+.prepare-tip {
+    font-size: 8px;
+    color: red;
+}
+
+.prepare-tip .tooltiptext {
+    visibility: hidden;
+    width: 200px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 5px;
+    font-size: 12px !important;
+    font-weight: 300;
+    position: absolute;
+    z-index: 1;
+}
+
+.prepare-tip:hover .tooltiptext {
+    visibility: visible;
+}
+
 @media (max-width: 768px) {
     .recipe-details,
     .recipe-preparation {
