Edit and remove links style and hover style added

--- a/scss/page-styles/your-recipes.scss
+++ b/scss/page-styles/your-recipes.scss
@@ -17,12 +17,15 @@
     flex-wrap: wrap;
 }
 
-
-.lo {
+.edit-recipe {
     text-align: right;
     color: #51ACEA;
 
     &:hover {
         color: #C471EB;
     }
+}
+
+.remove-recipe{
+    @extend .edit-recipe;
 }
