--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1469,6 +1469,29 @@ form p {
   color: #5aac17;
 }
 
+.prepare-tip {
+  font-size: 8px;
+  color: red;
+}
+
+.prepare-tip .tooltiptext {
+  visibility: hidden;
+  width: 200px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 5px;
+  font-size: 12px !important;
+  font-weight: 300;
+  position: absolute;
+  z-index: 1;
+}
+
+.prepare-tip:hover .tooltiptext {
+  visibility: visible;
+}
+
 @media (max-width: 768px) {
   .recipe-details,
 .recipe-preparation {
@@ -1523,11 +1546,11 @@ form p {
   flex-wrap: wrap;
 }
 
-.lo {
+.edit-recipe, .remove-recipe {
   text-align: right;
   color: #51ACEA;
 }
-.lo:hover {
+.edit-recipe:hover, .remove-recipe:hover {
   color: #C471EB;
 }
 
