--- a/templates/components/cards/recipe-card.html
+++ b/templates/components/cards/recipe-card.html
@@ -27,10 +27,10 @@
             <h5 class="card-title">{{recipes_user['title']}}</h5>
             <!-- card bottom section -->
             <div class="card-bottom-section">
-                <a href="{{url_for('edit_recipe')}}" class="edit-recipe">Edit</a>
-                <a href="{{url_for('remove_recipe')}}" class="remove-recipe">
-                        <i class="fas fa-trash-alt"></i>
-                    </a>
+                <button class="none-button edit-recipe" onclick="window.location.href='{{url_for('edit_recipe',recipe_id = recipes_user['_id'])}}';">Edit</button>
+                <button class="none-button remove-recipe" onclick="window.location.href='{{url_for('remove_recipe',recipe_id = recipes_user['_id'])}}';">
+                    <i class="fas fa-trash-alt"></i>
+                </button>
             </div>
         {% endif %}
     </div>
