Recipe card button style none-button style class created

--- a/scss/components/cards/recipe-card.scss
+++ b/scss/components/cards/recipe-card.scss
@@ -109,3 +109,10 @@
         color: #C471EB;
     }
 }
+
+.none-button {
+    border: none;
+    background: white;
+    font-size: 14px;
+    -webkit-appearance: attachment;
+}
