--- a/static/css/style.css
+++ b/static/css/style.css
@@ -384,6 +384,7 @@ ul li:hover ul.dropdown-menu .menu-hr {
 }
 
 .none-button {
+  padding: 0;
   border: none;
   background: white;
   font-size: 14px;
