--- a/scss/components/cards/recipe-card.scss
+++ b/scss/components/cards/recipe-card.scss
@@ -84,6 +84,12 @@
         color: #FF3377;
         font-size: 16px;
         margin-top: 20px;
+
+        a,
+        a:hover {
+            color: #FF3377;
+            text-decoration: none;
+        }
     }
 
     .difficulty-title {
