--- a/static/css/style.css
+++ b/static/css/style.css
@@ -361,6 +361,11 @@ ul li:hover ul.dropdown-menu .menu-hr {
   font-size: 16px;
   margin-top: 20px;
 }
+.card-body .card-title a,
+.card-body .card-title a:hover {
+  color: #FF3377;
+  text-decoration: none;
+}
 .card-body .difficulty-title {
   text-transform: lowercase;
   color: #51ACEA;
