Quick fix - youre recipes page main container auto hieght added

--- a/scss/page-styles/your-recipes.scss
+++ b/scss/page-styles/your-recipes.scss
@@ -1,5 +1,10 @@
 #your-recipes-page {
     padding-top: 60px;
+    .main-container {
+        $a: 100%;
+        $b: 400px;
+        min-height: calc(#{$a} - #{$b});
+    }
 }
 
 .font-w400 {
@@ -26,6 +31,17 @@
     }
 }
 
-.remove-recipe{
+.remove-recipe {
     @extend .edit-recipe;
+}
+
+@media (max-width: 1365px){
+    #your-recipes-page {
+    padding-top: 60px;
+    .main-container {
+        $a: 100%;
+        $b: 440px;
+        min-height: calc(#{$a} - #{$b});
+    }
+}
 }
