--- a/templates/pages/account.html
+++ b/templates/pages/account.html
@@ -1,5 +1,5 @@
 {% extends 'layout/base.html' %} {% set page = "account" %} {% block content %}
-<div class="container account-main-container">
+<div class="container">
     <h1 class="hidden">User menu</h1>
     <!-- welcme text -->
     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-xs-6 xSmall">
