--- a/scss/page-styles/account.scss
+++ b/scss/page-styles/account.scss
@@ -1,11 +1,17 @@
-.account-main-container {
+#user-account {
+    padding-top: 70px;
+    .main-container {
+        $a: 100%;
+        $b: 400px;
+        min-height: calc(#{$a} - #{$b});
+    }
 }
 
 .welcome-lead {
     color: #000;
 }
 
-.details-list{
+.details-list {
     padding-top: 10px;
 }
 
@@ -63,12 +69,22 @@
 }
 
 
-@media (max-width: 350px)
-{
-    .xSmall{
+@media (max-width: 350px) {
+    .xSmall {
         width: 100%;
         display: flex;
         flex-direction: column;
         justify-content: center;
+    }
+}
+
+@media (max-width: 1365px) {
+    #user-account {
+        padding-top: 60px;
+        .main-container {
+            $a: 100%;
+            $b: 440px;
+            min-height: calc(#{$a} - #{$b});
+        }
     }
 }
