--- a/scss/page-styles/add-recipe.scss
+++ b/scss/page-styles/add-recipe.scss
@@ -1,6 +1,10 @@
 #new-recipe-page {
     padding-top: 60px;
-
+    .main-container {
+        $a: 100%;
+        $b: 400px;
+        min-height: calc(#{$a} - #{$b});
+    }
     .page-title2 {
         margin-bottom: 30px;
     }
@@ -213,5 +217,16 @@
     #ingredient-scale {
         margin-left: 0;
         max-width: 250px;
+    }
+}
+
+@media (max-width: 1365px) {
+    #new-recipe-page {
+        padding-top: 60px;
+        .main-container {
+            $a: 100%;
+            $b: 440px;
+            min-height: calc(#{$a} - #{$b});
+        }
     }
 }
