Account page - before remove text changed

--- a/templates/pages/account.html
+++ b/templates/pages/account.html
@@ -19,7 +19,7 @@
                         <a href="{{url_for('remove_account')}}">Remove Account</a>
                 </button>
         </div>
-        <p class="before-remove">Please be careful when removing account.<br>All data will be lost</p>
+        <p class="before-remove">All recipes should be removed before removing account.<br>Otherwise they will be still available for users.</p>
     </div>
     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-xs-6 xSmall">
         <h4 class="welcome-lead">Recipes information</h4>
