Spelling file name mistake corrected

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -34,6 +34,6 @@
 @import 'page-styles/user-menu-blocks.scss';
 @import 'page-styles/error-page.scss';
 @import 'page-styles/add-recipe.scss';
-@import 'page-styles/edit-recipes.scss';
+@import 'page-styles/edit-recipe.scss';
 @import 'page-styles/your-recipes.scss';
 @import 'page-styles/recipe-page.scss';
