--- a/static/css/style.css
+++ b/static/css/style.css
@@ -953,6 +953,21 @@ form p {
     bottom: 0;
   }
 }
+#favourites-page {
+  padding-top: 70px;
+}
+#favourites-page .main-container {
+  min-height: calc(100% - 400px);
+}
+
+@media (max-width: 1365px) {
+  #favourites-page {
+    padding-top: 60px;
+  }
+  #favourites-page .main-container {
+    min-height: calc(100% - 440px);
+  }
+}
 @media screen and (min-height: 983px) and (min-width: 1020px) {
   #login-page .main-container {
     height: calc(100% - 360px);
