Simple progress bar added to count down before redirection to login page

--- a/scss/page-styles/favourites.scss
+++ b/scss/page-styles/favourites.scss
@@ -7,6 +7,23 @@
     }
 }
 
+.favourites-text {
+    font-weight: 400;
+    color: #FF3377;
+}
+
+.redicret-message {
+    font-weight: 400;
+    span {
+        color: #FF3377;
+    }
+}
+
+#progressBar {
+    color: #FF3377;
+}
+
+
 @media (max-width: 1365px) {
     #favourites-page {
         padding-top: 60px;
