--- a/static/css/style.css
+++ b/static/css/style.css
@@ -960,6 +960,22 @@ form p {
   min-height: calc(100% - 400px);
 }
 
+.favourites-text {
+  font-weight: 400;
+  color: #FF3377;
+}
+
+.redicret-message {
+  font-weight: 400;
+}
+.redicret-message span {
+  color: #FF3377;
+}
+
+#progressBar {
+  color: #FF3377;
+}
+
 @media (max-width: 1365px) {
   #favourites-page {
     padding-top: 60px;
