--- a/templates/components/cards/recipe-card.html
+++ b/templates/components/cards/recipe-card.html
@@ -15,7 +15,7 @@
                         <i class="far fa-heart fa-hover-hidden"></i>
                         <i class="fas fa-heart fa-hover-show"></i>
                     </a>
-                <a href="{{url_for('this_recipe')}}" class="card-read-more">Read more</a>
+                <a href="{{url_for('recipe_page')}}" class="card-read-more">Read more</a>
             </div>
         {% else %}
             <div class="card-image">
