--- a/static/css/style.css
+++ b/static/css/style.css
@@ -972,8 +972,12 @@ form p {
   color: #FF3377;
 }
 
-#progressBar {
-  color: #FF3377;
+.progress {
+  width: 300px;
+}
+
+.progress-bar {
+  background-color: #FF3377;
 }
 
 @media (max-width: 1365px) {
