Redirect from login page after succesfull login back to favourites page

--- a/templates/pages/favourites.html
+++ b/templates/pages/favourites.html
@@ -5,7 +5,7 @@
     {% if no_user == 'true' %}
     <p class="lead">Please login to see you favurite recipes list.</p>
     <div class="container">
-        <button class="btn main-button-small" onclick="window.location.href='{{url_for('login')}}';">Login</button>
+        <button class="btn main-button-small" onclick="window.location.href='{{url_for('login', favourites_accessed='FALSE')}}';">Login</button>
     </div>
     {% else %}
         {% if favourites_count != 1 %}
