Proposed cards, random 10, sections added

--- a/scss/page-styles/recipes.scss
+++ b/scss/page-styles/recipes.scss
@@ -28,6 +28,10 @@
     font-weight: 400;
 }
 
+.proposed-recipes{
+    margin-top: 20px;
+}
+
 .card-results {
     margin-top: 40px;
     justify-content: center;
