--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1102,6 +1102,10 @@ form p {
   font-weight: 400;
 }
 
+.proposed-recipes {
+  margin-top: 20px;
+}
+
 .card-results {
   margin-top: 40px;
   justify-content: center;
