--- a/templates/pages/recipes.html
+++ b/templates/pages/recipes.html
@@ -19,15 +19,17 @@
     </div>
     <!-- Search result container -->
     <div class="container">
-        <h4 class="lead proposed-recipes">Check our 10 proposed recipes for you!</h4>
-        <div class="proposed-cards">
-            {% for proposed in random_10 %}
-                {% include 'components/cards/recipe-card.html' %}
-            {% endfor %}
-        </div>
-        <div class="card-results">
-
-        </div>
+        {% if recipe_range == 0 %}
+            <h4 class="lead proposed-recipes">Our proposed recipes list is empty... We can't propose you anything</h4>
+        {% else %}
+            <h4 class="lead proposed-recipes">Check {{recipe_range}} proposed recipes for you!</h4>
+                <div class="proposed-cards">
+                    {% for proposed in random_10 %} {% include 'components/cards/recipe-card.html' %} {% endfor %}
+                </div>
+                <div class="card-results">
+        
+                </div>
+        {% endif %}
     </div>
 </div>
 {% endblock %}
