--- a/templates/pages/recipes.html
+++ b/templates/pages/recipes.html
@@ -20,25 +20,24 @@
     <!-- Search result container -->
     <div class="container">
         {% if recipe_range == 0 %}
-            <h4 class="lead proposed-recipes">Our proposed recipes list is empty... We can't propose you anything</h4>
+        <h4 class="lead proposed-recipes">Our proposed recipes list is empty... We can't propose you anything</h4>
+        {% else %} {% if search_result == 'FALSE' %}
+        <h4 class="lead proposed-recipes">Check {{recipe_range}} randomly selected recipes for you!</h4>
+        <div class="card-result your-cards-result">
+            {% for proposed in random_10 %} {% include 'components/cards/recipe-card.html' %} {% endfor %}
+        </div>
         {% else %}
-            {% if search_result == 'FALSE' %}
-            <h4 class="lead proposed-recipes">Check {{recipe_range}} randomly selected recipes for you!</h4>
-                <div class="card-result">
-                    {% for proposed in random_10 %} 
-                        {% include 'components/cards/recipe-card.html' %} 
-                    {% endfor %}
-                </div>
+        <div class="card-results">
+            {% if search_count == 0 %}
+            <p class="back-to-recipes">Nothing was found for '<span class="recipe-count">{{search}}</span>' .. </p></br>
+            <a href="{{url_for('recipes')}}" class="no-results-margin">
+                <button class="btn main-button-small">Back to proposed</button>
+            </a>
             {% else %}
-                <div class="card-results">
-                    {% if search_count == 0 %}
-                        <h4 class="lead proposed-recipes">Nothing was found for {{serach}}</h4>
-                    {% else %}
-                        <h4 class="lead proposed-recipes">We found {{serach}} result in all Recipes</h4>
-                    {% endif %}
-                </div>
+            <h4 class="lead proposed-recipes">We found {{serach}} result in all Recipes</h4>
             {% endif %}
-        {% endif %}
+        </div>
+        {% endif %} {% endif %}
     </div>
 </div>
 {% endblock %}
