--- a/templates/pages/recipes.html
+++ b/templates/pages/recipes.html
@@ -15,29 +15,35 @@
                     </div>
                 </div>
             </form>
+            
         </div>
     </div>
     <!-- Search result container -->
     <div class="container">
         {% if recipe_range == 0 %}
-        <h4 class="lead proposed-recipes">Our proposed recipes list is empty... We can't propose you anything</h4>
-        {% else %} {% if search_result == 'FALSE' %}
-        <h4 class="lead proposed-recipes">Check {{recipe_range}} randomly selected {% if recipe_range == 1 %} recipe {% else %} recipes {% endif %} for you!</h4>
-        <div class="card-result your-cards-result">
-            {% for doc in random_10 %} {% include 'components/cards/recipe-card.html' %} {% endfor %}
-        </div>
-        {% else %}
-        <div class="card-results">
-            {% if search_count == 0 %}
-            <p class="back-to-recipes">Nothing was found for '<span class="recipe-count">{{search}}</span>' .. </p>
-            </br>
-            <a href="{{url_for('recipes')}}" class="no-results-margin">
-                <button class="btn main-button-small">Back to proposed</button>
-            </a> {% else %}
-            <h4 class="lead proposed-recipes">We found {{serach}} result in all Recipes</h4>
+            <h4 class="lead proposed-recipes">Our proposed recipes list is empty... We can't propose you anything</h4>
+        {% else %} 
+            {% if search_result == 'FALSE' %}
+                <h4 class="lead proposed-recipes">Check {{recipe_range}} randomly selected {% if recipe_range == 1 %} recipe {% else %}  recipes {% endif %} for you!</h4>
+                <div class="card-result your-cards-result">
+                    {% for doc in random_10 %}
+                        {% include 'components/cards/recipe-card.html' %} 
+                    {% endfor %}
+                </div>
+            {% else %}
+            <div class="card-results">
+                {% if search_count == 0 %}
+                    <p class="back-to-recipes">Nothing was found for '<span class="recipe-count">{{search}}</span>' .. </p>
+                    </br>
+                    <a href="{{url_for('recipes')}}" class="no-results-margin">
+                        <button class="btn main-button-small">Back to proposed</button>
+                    </a> 
+                {% else %}
+                    <h4 class="lead proposed-recipes">We found {{serach}} result in all Recipes</h4>
+                {% endif %}
+                </div>
             {% endif %}
-        </div>
-        {% endif %} {% endif %}
+        {% endif %}
     </div>
 </div>
 {% endblock %}
