--- a/templates/components/cards/recipe-card.html
+++ b/templates/components/cards/recipe-card.html
@@ -2,39 +2,39 @@
     <!-- card body container -->
     <div class="card-body">
         {% if body_id != 'your-recipes-page' %}
-            <div class="card-image">
-                <!-- image source from database -->
-                <img class="card-img-top" src="/file/{{doc['recipe_image']}}" alt="{{doc['title']}} image title">
-            </div>
-            <!-- card top section -->
-            <h2 class="hidden">{{doc['title']}}</h2>
-            <h5 class="card-title">{{doc['title']}}</h5>
-            <p class="card-text"><span class="recipe-info">Difficulty - </span>{{doc['difficulty']}}</p>
-            <p class="card-text"><span class="recipe-info">Preparation time - </span>{{doc['time']}}</p>
-            <div class="card-bottom-section">
-                <a href="{{url_for('add_to_favourites')}}" class="card-fav-icon">
+        <div class="card-image">
+            <!-- image source from database -->
+            <img class="card-img-top" src="/file/{{doc['recipe_image']}}" alt="{{doc['title']}} image title">
+        </div>
+        <!-- card top section -->
+        <h2 class="hidden">{{doc['title']}}</h2>
+        <h5 class="card-title">{{doc['title']}}</h5>
+        <p class="card-text"><span class="recipe-info">Difficulty - </span>{{doc['difficulty']}}</p>
+        <p class="card-text"><span class="recipe-info">Preparation time - </span>{{doc['time']}}</p>
+        <div class="card-bottom-section">
+            <a href="{{url_for('add_to_favourites')}}" class="card-fav-icon">
                         <i class="far fa-heart fa-hover-hidden"></i>
                         <i class="fas fa-heart fa-hover-show"></i>
                     </a>
-                <a href="{{url_for('recipe_page')}}" class="card-read-more">Read more</a>
-            </div>
+            <a href="{{url_for('recipe_page')}}" class="card-read-more">Read more</a>
+        </div>
         {% else %}
-            <div class="card-image">
-                <!-- image source from database -->
-                <img class="card-img-top" src="/file/{{recipes_user['recipe_image']}}" alt="{{recipes_user['title']}} image title">
-            </div>
-            <!-- card top section -->
-            <h2 class="hidden">{{recipes_user['title']}}</h2>
-            <h5 class="card-title">
-                <a href="{{url_for('recipe_page', recipe_id = recipes_user['_id'])}}">{{recipes_user['title']}}</a>
-            </h5>
-            <!-- card bottom section -->
-            <div class="card-bottom-section">
-                <button class="none-button edit-recipe" onclick="window.location.href='{{url_for('edit_recipe',recipe_id = recipes_user['_id'])}}';">Edit</button>
-                <button class="none-button remove-recipe" onclick="window.location.href='{{url_for('remove_recipe',recipe_id = recipes_user['_id'])}}';">
+        <div class="card-image">
+            <!-- image source from database -->
+            <img class="card-img-top" src="/file/{{recipes_user['recipe_image']}}" alt="{{recipes_user['title']}} image title">
+        </div>
+        <!-- card top section -->
+        <h2 class="hidden">{{recipes_user['title']}}</h2>
+        <h5 class="card-title">
+            <a href="{{url_for('recipe_page', recipe_id = recipes_user['_id'])}}">{{recipes_user['title']}}</a>
+        </h5>
+        <!-- card bottom section -->
+        <div class="card-bottom-section">
+            <button class="none-button edit-recipe" onclick="window.location.href='{{url_for('edit_recipe',recipe_id = recipes_user['_id'])}}';"><a href="" class=""></a>Edit</button>
+            <button class="none-button remove-recipe" onclick="window.location.href='{{url_for('remove_recipe',recipe_id = recipes_user['_id'])}}';">
                     <i class="fas fa-trash-alt"></i>
                 </button>
-            </div>
+        </div>
         {% endif %}
     </div>
 </div>
