Recipes proposed text changed

--- a/templates/pages/recipes.html
+++ b/templates/pages/recipes.html
@@ -16,7 +16,7 @@
                 </div>
             </form>
             {% if recipe_range == 0 %}
-            <h4 class="lead proposed-recipes">Our proposed recipes list is empty... We can't propose you anything</h4>
+            <h4 class="lead proposed-recipes">Our selected recipes list is empty... We can't propose you anything</h4>
             {% else %} 
                 {% if search_result == 'FALSE' %}
                 <h4 class="lead proposed-recipes">Check {{recipe_range}} randomly selected {% if recipe_range == 1 %} recipe {% else %} recipes {% endif %} for you!</h4>
