--- a/static/css/style.css
+++ b/static/css/style.css
@@ -357,6 +357,7 @@ ul li:hover ul.dropdown-menu .menu-hr {
   flex-direction: column;
 }
 .card-body .card-title {
+  text-transform: capitalize;
   padding: 0 1rem !important;
   color: #FF3377;
   font-size: 16px;
