Search result - card container code rearranged. Recipes code rearranged to show reult text. Result text color changed to seperate it from random text

--- a/scss/page-styles/recipes.scss
+++ b/scss/page-styles/recipes.scss
@@ -51,6 +51,9 @@
     display: flex;
     flex-wrap: wrap;
 }
+.success-found{
+    color: #5aac17;
+}
 
 @media (max-width: 460px) {
     .col-min-12 {
