--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1135,6 +1135,10 @@ form p {
   flex-wrap: wrap;
 }
 
+.success-found {
+  color: #5aac17;
+}
+
 @media (max-width: 460px) {
   .col-min-12 {
     width: 220px;
