--- a/templates/pages/recipes.html
+++ b/templates/pages/recipes.html
@@ -21,24 +21,16 @@
                 {% if search_result == 'FALSE' %}
                 <h4 class="lead proposed-recipes">Check {{recipe_range}} randomly selected {% if recipe_range == 1 %} recipe {% else %} recipes {% endif %} for you!</h4>
                 {% else %}
-                <div class="card-results">
                     {% if search_count == 0 %}
-                    <p class="back-to-recipes">Nothing was found for '<span class="recipe-count">{{search_text}}</span>' .. </p>
-                    </br>
-                    <a href="{{url_for('recipes')}}" class="no-results-margin">
-                            <button class="btn main-button-small">Back to proposed</button>
-                        </a> 
-                    {% else %}
-                        <h4 class="lead proposed-recipes">We found {{search_count}} result in all Recipes</h4>
-                        <div class="container">
-                            <div class="card-result your-cards-result">
-                            {% for doc in search_request %}
-                                {% include 'components/cards/recipe-card.html' %}
-                            {% endfor %}
-                            </div>
+                        <div class="card-results">
+                            <p class="back-to-recipes">Nothing was found for '<span class="recipe-count">{{search_text}}</span>' .. </p></br>
+                            <a href="{{url_for('recipes')}}" class="no-results-margin">
+                                <button class="btn main-button-small">Back to proposed</button>
+                            </a> 
                         </div>
+                    {% else %}
+                        <h4 class="lead proposed-recipes success-found">We found {{search_count}} result in all Recipes</h4>
                     {% endif %}
-                </div>
                 {% endif %} 
             {% endif %}
         </div>
@@ -47,9 +39,12 @@
 <!-- Search result container -->
 <div class="container">
     <div class="card-result your-cards-result">
-        {% for doc in random_10 %}
-            {% include 'components/cards/recipe-card.html' %}
-        {% endfor %}
+    {% for doc in search_request %}
+        {% include 'components/cards/recipe-card.html' %}
+    {% endfor %}
+    {% for doc in random_10 %}
+        {% include 'components/cards/recipe-card.html' %}
+    {% endfor %}
     </div>
 </div>
 {% endblock %}
