Quick fix - 'Preparing time' change to 'Time' on recipe card

--- a/templates/components/cards/recipe-card.html
+++ b/templates/components/cards/recipe-card.html
@@ -10,7 +10,7 @@
         <h2 class="hidden">{{doc['title']}}</h2>
         <h5 class="card-title">{{doc['title']}}</h5>
         <p class="card-text"><span class="recipe-info">Difficulty - </span>{{doc['difficulty']}}</p>
-        <p class="card-text"><span class="recipe-info">Preparation time - </span>{{doc['time']}}</p>
+        <p class="card-text"><span class="recipe-info">Time - </span>{{doc['time']}}</p>
         <div class="card-bottom-section">
             <a href="{{url_for('add_to_favourites')}}" class="card-fav-icon">
                         <i class="far fa-heart fa-hover-hidden"></i>
