Display different heart style for recipes which exsits in favourite list. Add to and remove from favourite list function created

--- a/templates/components/cards/recipe-card.html
+++ b/templates/components/cards/recipe-card.html
@@ -12,10 +12,16 @@
         <p class="card-text"><span class="recipe-info">Difficulty - </span>{{doc['difficulty']}}</p>
         <p class="card-text"><span class="recipe-info">Time - </span>{{doc['time']}}</p>
         <div class="card-bottom-section">
+            {% if doc['_id'] in my_favourites %}
+            <a href="{{url_for('remove_from_favourites',recipe_id = doc['_id'])}}" class="card-fav-icon">
+                <i class="fas fa-heart"></i>
+            </a>
+            {% else %}
             <a href="{{url_for('add_to_favourites',recipe_id = doc['_id'])}}" class="card-fav-icon">
-                        <i class="far fa-heart fa-hover-hidden"></i>
-                        <i class="fas fa-heart fa-hover-show"></i>
-                    </a>
+                <i class="far fa-heart fa-hover-hidden"></i>
+                <i class="fas fa-heart fa-hover-show"></i>
+            </a>
+            {% endif %}
             <a href="{{url_for('recipe_page')}}" class="card-read-more">Read more</a>
         </div>
         {% else %}
