--- a/scss/components/cards/recipe-card.scss
+++ b/scss/components/cards/recipe-card.scss
@@ -81,6 +81,7 @@
     flex-direction: column;
 
     .card-title {
+        height: 40px;
         text-transform: capitalize;
         padding: 0 1rem !important;
         color: #FF3377;
