--- a/templates/pages/edit-recipe.html
+++ b/templates/pages/edit-recipe.html
@@ -1,5 +1,5 @@
 {% extends 'layout/base.html' %} {% set page = "edit-recipe" %} {% block content %}
 <div class="container">
-    <h1 class="hidden">Edit Recpies</h1>
+    <h1 class="hidden">Edit Recpie</h1>
 </div>
 {% endblock %}
