Recipe title used as hidden h1 tag and page main title

--- a/templates/pages/recipe-page.html
+++ b/templates/pages/recipe-page.html
@@ -1,5 +1,6 @@
 {% extends 'layout/base.html' %} {% set page = "edit-recipe" %} {% block content %}
 <div class="container">
-    <h1 class="hidden">Recpie - {{doc['title']}}</h1>
+    <h1 class="hidden">Recpie - {{this_recipe['title']}}</h1>
+    <h2 class="page-title">{{this_recipe['title']}}</h2>
 </div>
 {% endblock %} d
