Auto height and padding style applied

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1624,4 +1624,11 @@ form p {
   color: #C471EB;
 }
 
+#recipe-page {
+  padding-top: 70px;
+}
+#recipe-page .main-container {
+  min-height: calc(100% - 400px);
+}
+
 /*# sourceMappingURL=style.css.map */
