--- a/templates/pages/recipe-page.html
+++ b/templates/pages/recipe-page.html
@@ -1,6 +1,15 @@
 {% extends 'layout/base.html' %} {% set page = "edit-recipe" %} {% block content %}
 <div class="container">
     <h1 class="hidden">Recpie - {{this_recipe['title']}}</h1>
-    <h2 class="page-title">{{this_recipe['title']}}</h2>
+    <div class="this-recipe-container">
+        <div class="top-info">
+            <img src="/file/{{this_recipe['recipe_image']}}" alt="image - {{this_recipe['title']}}">
+            <h2 class="page-title recipe-title">{{this_recipe['title']}}</h2>
+        </div>
+        <div class="prepare-info">
+            <p class="time-info">{{this_recipe['time']}}</p>
+            <p class="difficulty-info">{{this_recipe['difficulty']}}</p>
+        </div>
+    </div>
 </div>
 {% endblock %} d
